SF-460: Fix clipping of text size menu when sharing is disabled

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
@@ -20,17 +20,12 @@
       }
     }
   }
-  #questions-panel {
-  }
   #text-panel {
     display: flex;
     flex-direction: column;
     flex: 1;
     height: 100%;
     width: 100%;
-    @include media-breakpoint-up(md) {
-      overflow: hidden;
-    }
     .chapter-select {
       cursor: pointer;
     }
